force-app/main/default/objects/City__c/City__c.object-meta.xml
<CustomObject>
    <label>City</label>
    <nameField>
        <label>City Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>City</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>