force-app/main/default/objects/City__c/fields/District__c.field-meta.xml
<CustomField>
    <fullName>District__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>District</label>
    <referenceTo>District__c</referenceTo>
    <relationshipLabel>City</relationshipLabel>
    <relationshipName>City</relationshipName>
    <type>Lookup</type>
</CustomField>